# ObjTmp

./: .gitignore  CMakeLists.txt  main.cpp
include/: edge.hxx  mesh.hxx  point.hxx  triangle.hxx  vec3.hxx  vertex.hxx
src/: point.cpp  vertex.cpp
